update on the chat-controller

--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,17 @@
-OPEN_AI_SECRET=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
-OPENAI_ORGANIZATON=org-ELmCUFEKYHqdpbgq5Nm1C1Fq
+OPEN_AI_SECRET=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
+OPENAI_ORGANIZATON=org-mTI1FN7bXYS4lwefPpHE2wHT
 MONGODB_URL=mongodb+srv://muhammed:DX1gRqeGfWa3dCHG@cluster0.cvtz4vn.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=123456789abcd
 COOKIE_SECRET=abcd123456789
 PORT=5000
 
 DX1gRqeGfWa3dCHG
+
+# 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
+
+
+# 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
+# org-ELmCUFEKYHqdpbgq5Nm1C1Fq
+
+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
+[1/9, 3:32 PM] Mayor: org-mTI1FN7bXYS4lwefPpHE2wHT
